website/client/src/app/stories/story.component.scss
@import "~src/styles/_variables";


#intro {

    margin-top: 20%;

    h1 {
        margin-top: 0;
        &:before {
            content: attr(data-name);
        }
    }
    
}

h5 {

    @include pxtoem(24, 48);
    text-transform: uppercase;

    line-height: 1.17;
    color: $dark-sky-blue;

    margin-bottom: 0;
    @include not-phones {
        margin-top: 0;
    }

    &.hi {
        text-transform: none;            
    }
}

.a {

    text-align: center;

}

#description {

    @include pxtoem(12, 18);
    font-weight: 500;
    line-height: 1.33;
    color: $french-blue;
    
    &:not(.hi) {
        font-family: 'Avenir';
    }
    
}

#next-prev {
    justify-content: space-evenly;
    
    a > div {
        margin-top: 7%;
    }
    
    a {
        
        @include pxtoem(18, 24);
        font-weight: bold;
        line-height: 1.17;
        text-transform: uppercase;
        
        color: $dark-sky-blue;

        .hi {
            @include enlarge();
        }
    }
}

.subheader {
    ::ng-deep .hi {
        @include enlarge();     
    }

    &.hi {
        text-transform: none;
        @include enlarge();
    }
}

